# Bharat-Trust-AI

./: .gitignore  .vercelignore  LICENSE  README.md  render.yaml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  vercel.json  vercel.json.bak
.github/workflows/: ci.yml
_app/: database.py  schemas.py  seed.py
_app/agents/: base.py  fraud_detection.py  price_intelligence.py  return_prediction.py  review_intelligence.py  trust_engine.py
_app/orchestration/: live.py
_app/routers/: api.py  stream.py
api/: index.py
api/app/agents/: orchestrator.py
api/app/orchestration/: events.py
api_app_package/api/app/agents/: logistics.py  seller_monitoring.py
api_app_package/api/data/: bharattrust.seed.db
app/agents/: support.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: _frontend.py  main.py  models.py
backend/app/agents/: authenticity.py
public/: index.html
scripts/: embed_frontend.py
tests/: test_smoke.py
